[package]
name = "deadpool-libsql"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Junji Takakura <j.takakura@gmail.com>"]
description = "Dead simple async pool for libSQL"
keywords = ["async", "database", "pool", "libsql"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jtakakura/deadpool-libsql"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
deadpool = { version = "0.12.0", default-features = false, features = [
    "managed",
] }
libsql = { version = "0.9.17" }
serde = { package = "serde", version = "1.0", features = [
    "derive",
], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["core", "remote", "rt_tokio_1"]
core = ["libsql/core"]
replication = ["libsql/replication"]
sync = ["libsql/sync"]
remote = ["libsql/remote"]
rt_tokio_1 = ["deadpool/rt_tokio_1"]
rt_async-std_1 = ["deadpool/rt_async-std_1"]
serde = ["deadpool/serde", "dep:serde"]
